true fix for centering toasts on small width screens

--- a/css/bootstrap-toast.css
+++ b/css/bootstrap-toast.css
@@ -14,7 +14,8 @@
 
 @media only screen and (max-width: 576px) {
     #toastContainer {
-        width: 100%;
+        left: 5%;
+        right: 5%;
     }
     .toast {
         margin: auto;
